1. ConnectionManager.java 에서 가능한 것들은 private 로 변경
2. ConnectionManager.java 에서 is 메소드 추가

- is() 메소드는 start() 메소드가 호출되었는지를 반환한다.

3. deprecated 된 메소드 대체

- new Integer(x) -> Integer.valueOf(x)
- 등등...

4. 버전 번호 변경